# Mostly_used_interview_algorithms

./: .gitignore  DSA_quiz.py  DS_and_algotithims.py  OOP_Concepts.py  Pipfile  README.md  app.c  dsa_with_ts.ts  finding_nines.ts  game_of_life.ts  index.html  interview.py  main.go  mocking-spinner.ts  package.json  panag.py  pyproject.toml  pyru.sh  quick_quiz.py
Showcase/: dsa.py  main.py  model.py
__cpp__/: main.cpp
__java__/: main.java
go/: main.go
go-lang/: go.mod  main.go
go-lang/algos/: algos.go  bubbleSort.go
go/algos/: bubbleSort.go
go/problems/: customStackType.go  increasingPairs.go  perms.go
go/tester/: testLogger.go
grind75/: cloneGraph.py
java/: KnightMoves.java  main.java
python/Concepts/: OOP_Concepts.py  recursion_refresher.py
python/algos/: DS_and_algotithims.py  dijkstra.py
python/problems/: adiitional_test.py  backtracking.py  backtracking_2.py  backtracking_3.py  chessMovesCalc.py  combination_sum.py  duplicates.py  dynamic_programming_problems.py  find_peaks.py  gameoflife.py  generate_parentheses.py  largestSquare.py  most_frequent_char.py  pali.py  panag.py  permuation.py  phonenumber_letters.py  recursion_refresher.py  reverse_words.py  sliding_window.py  stars.py  sum_digits.py  traversing_arrays.py
python/tester/: testLogger.py
ts/: bun.lockb  index.ts  package.json
ts-js/: tsconfig.json
ts-js/problems/: mocking-spinner.ts  stars.ts
ts/algos/: binary_search.ts  bubbleSort.ts  dijkstra.ts  dsa_with_ts.ts  finding_nines.ts  numsum.ts  panagram.ts
ts/problems/: customStack.ts  duplicates.ts  majority_element.ts  (+5 more)
